...
                  : null,
            ),
          if (_currentPage == _TopLevelPage.browser) ...[
            Consumer(
              builder: (context, ref, child) => IconButton(
                icon: const Icon(Icons.search),
                tooltip: 'Search',
                onPressed: ref.read(browserProvider.notifier).toggleSearch,
              ),
            ),
            Consumer(
              builder: (context, ref, child) => IconButton(
                icon: const Icon(Icons.unfold_more),
...
