...
      id: 'energy',
      expression: 'c^2',
    ),
  );
  repo.register(
    const DerivedUnit(
      id: 'hbar',
      aliases: ['spin', 'natural_action', 'atomicaction', 'ℏ'],
      expression: 'h / 2 pi',
    ),
  );
  repo.register(
    const DerivedUnit(
...
