...
    inputExpression: '1|2 gallon',
    outputExpression: 'ml',
  ),
  FreeformExample(
    // marathon run distance
    inputExpression: '26.2 miles',
    outputExpression: 'km',
  ),
  FreeformExample(
    // average household daily energy usage
    inputExpression: '30 kWh',
    outputExpression: 'btu',
  ),
...
